--- a/style/_main_fanbase.scss
+++ b/style/_main_fanbase.scss
@@ -45,7 +45,6 @@
         color: white;
         i {
             font-size: 3rem;
-            padding-block: 1rem;
         }
         h2 {
             font-size: 1.5rem;
@@ -54,7 +53,7 @@
         }
         h3 {
             font-size: 1.3rem;
-            font-weight: 500;
+            font-weight: 700;
             padding-block: 1rem;
         }
         p {
@@ -62,7 +61,7 @@
         }
         &__item {
             text-align: center;
-            padding-top: 2rem;
+            padding-top: 4rem;
             &:last-child {
                 padding-bottom: 2rem;
             }
